# wakatime-lsp

./: CONTRIBUTING.md  Cargo.toml  LICENCE  README.md  clippy.toml  flake.nix  package.nix
.github/workflows/: nix.yml  rust.yml
src/: lib.rs  main.rs
