[package]
name = "wakatime-ls"
version = "0.1.1"
edition = "2021"

description = "A dead-simple language server around wakatime-cli to send code tracking heartbeats"
repository = "https://github.com/mrnossiom/wakatime-ls"
keywords = ["wakatime", "language-server", "lsp"]
categories = ["development-tools"]
license = "CECILL-2.1"

[dependencies]
serde_json = "1"
tokio = { version = "1", features = ["io-std", "macros", "process", "rt"] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
[lints.rust]
unsafe_code = "deny"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }

dbg_macro = "warn"
missing_docs_in_private_items = "warn"
todo = "warn"
unwrap_used = "warn"
[lints.rustdoc]
all = "warn"

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.19.1"
ci = "github"
installers = []
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
unix-archive = ".tar.gz"
pr-run-mode = "plan"
