[package]
name = "wakatime-ls"
version = "0.1.1"
edition = "2021"

description = "A dead-simple language server around wakatime-cli to send code tracking heartbeats"
repository = "https://github.com/mrnossiom/wakatime-ls"
keywords = ["wakatime", "language-server", "lsp"]
categories = ["development-tools"]
license = "CECILL-2.1"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.97"
serde = "1"
serde_json = "1"

[lints]
[lints.rust]
unsafe_code = "deny"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }

dbg_macro = "warn"
missing_docs_in_private_items = "warn"
todo = "warn"
unwrap_used = "warn"
[lints.rustdoc]
all = "warn"

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.19.1"
ci = "github"
installers = []
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
unix-archive = ".tar.gz"
pr-run-mode = "plan"
